Feat : client, lawyer model 추가.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       prefix: /WEB-INF/views/
       suffix: .jsp
 
-  # oracle 관련 설정
+   # oracle 관련 설정
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     url: jdbc:oracle:thin:@localhost:1521/xe
@@ -14,8 +14,10 @@ spring:
 
 # mybatis 관련 설정
 mybatis:
-  mapper-locations: /mappers/*.xml # mapper.xml 위치 설정
-  type-aliases-package:
-
+  mapper-locations: /mappers/*.xml # mapper.xml 위치 지정
+  type-aliases-package: com.kh.lawservice101.test.model.vo,
+                        com.kh.lawservice101.client.model.vo, com.kh.lawservice101.lawyer.model.vo
   configuration:
-    jdbc-type-for-null: varchar # # ""값 null 처리
+    map-underscore-to-camel-case: true # model 프로퍼티 camel case 설정
+    jdbc-type-for-null: varchar # ""값 null 처리
+
