Feat. 의뢰인  및 변호사 회원가입 (db연결) 기능구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,6 @@ mybatis:
     map-underscore-to-camel-case: true # model 프로퍼티 camel case 설정
     jdbc-type-for-null: varchar # ""값 null 처리
 
+# 포트 변경
+server:
+  port: 9090
