Feat: 채팅방 생성 및 채팅 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,8 @@ spring:
 mybatis:
   mapper-locations: /mappers/*.xml # mapper.xml 위치 지정
   type-aliases-package: com.kh.lawservice101.test.model.vo,
-                        com.kh.lawservice101.client.model.vo, com.kh.lawservice101.lawyer.model.vo
+                        com.kh.lawservice101.client.model.vo, com.kh.lawservice101.lawyer.model.vo,
+                        com.kh.lawservice101.chat.model.vo
   configuration:
     map-underscore-to-camel-case: true # model 프로퍼티 camel case 설정
     jdbc-type-for-null: varchar # ""값 null 처리
