--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket' // WebSocket
+	implementation 'org.webjars:sockjs-client:1.5.1' // sockjs
+	implementation 'org.webjars:stomp-websocket:2.3.4' // stomp
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation 'javax.servlet:jstl'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.7.7'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
