--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation 'javax.servlet:jstl'
 	implementation 'org.springframework.boot:spring-boot-devtools:2.7.7'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
