--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,9 +33,9 @@ mybatis:
   type-aliases-package: com.kh.lawservice101.test.model.vo,
                         com.kh.lawservice101.client.model.vo, 
                         com.kh.lawservice101.lawyer.model.vo,
-                        com.kh.lawservice101.knowledgein.model.vo
-                        com.kh.lawservice101.client.model.vo, com.kh.lawservice101.lawyer.model.vo,
-                        com.kh.lawservice101.chat.model.vo
+                        com.kh.lawservice101.knowledgein.model.vo,
+                        com.kh.lawservice101.category.model.vo
+
   configuration:
     map-underscore-to-camel-case: true # model 프로퍼티 camel case 설정
     jdbc-type-for-null: varchar # ""값 null 처리
