--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,8 @@ mybatis:
                         com.kh.lawservice101.knowledgein.model.vo
                         com.kh.lawservice101.client.model.vo, com.kh.lawservice101.lawyer.model.vo,
                         com.kh.lawservice101.chat.model.vo
+                        , com.kh.lawservice101.booking.model.vo
+                      , com.kh.lawservice101.payment.model.vo
   configuration:
     map-underscore-to-camel-case: true # model 프로퍼티 camel case 설정
     jdbc-type-for-null: varchar # ""값 null 처리
