--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,17 @@ spring:
           starttls:
             enable: true
 
+  servlet:
+    multipart:
+      :enabled: true # 파일 업로드 가능 여부를 선택합니다
+      :location: D:\IntelliJ-work\images # 업로드된 파일의 임시 저장 경로
+      :max-request-size: 30MB # 한 번에 최대 업로드 가능 용량
+      :max-file-size: 10MB # 파일 하나의 최대 크기
+
+file:
+  upload:
+    path: D:\IntelliJ-work\images # 업로드된 파일 저장
+
 # mybatis 관련 설정
 mybatis:
   mapper-locations: /mappers/*.xml # mapper.xml 위치 지정
@@ -36,9 +47,10 @@ mybatis:
                         com.kh.lawservice101.lawyer.model.vo,
                         com.kh.lawservice101.chat.model.vo,
                         com.kh.lawservice101.knowledgein.model.vo,
-                        com.kh.lawservice101.category.model.vo, 
-                        com.kh.lawservice101.booking.model.vo, 
+                        com.kh.lawservice101.category.model.vo,
+                        com.kh.lawservice101.booking.model.vo,
                         com.kh.lawservice101.payment.model.vo
+
   configuration:
     map-underscore-to-camel-case: true # model 프로퍼티 camel case 설정
     jdbc-type-for-null: varchar # ""값 null 처리
