--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	implementation 'javax.servlet:jstl'
 	implementation 'org.springframework.boot:spring-boot-devtools:2.7.7'
 	implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.2'
+	implementation 'net.nurigo:javaSDK:2.2'
 	compileOnly 'org.projectlombok:lombok'
     implementation 'org.jetbrains:annotations:23.0.0'
 	annotationProcessor 'org.projectlombok:lombok'
