변호사/고객 회원가입페이지 유효성검사.JG

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,8 +44,8 @@ mybatis:
     jdbc-type-for-null: varchar # ""값 null 처리
 
 # 포트 변경
-#server:
-#  port: 9090
+server:
+ port: 9090
 
 # 페이징 관련 설정
 pagehelper:
